<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ButilOrdering</string>
    <string name="powered_by_n_android">POWERED BY\n Android</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email id</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="registered_e_mail">Registered e-mail</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="please_provide_email_address_which_was_used_at_the_time_of_register">Please provide email address which was used at the time of register</string>
    <string name="butil_mnl">Butil MNL</string>
    <string name="log_out">Log Out</string>
    <string name="rate_app">Rate App</string>
    <string name="about">About</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="add_cart">Add to Cart</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="order">Orders</string>
    <string name="todo">TODO</string>
    <string name="customer">Customer</string>
    <string name="dummy_text">The almond is the edible kernel of the fruit of the sweet almond tree. It is a bright white fruit wrapped in a reddish brown cover. It is consumed as dry fruit, fried and/or salted.</string>
    <string name="categories">Categories</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Payment">
        <item>Gcash</item>
        <item>Cash on Delivery</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonLike">Like</string>
    <string name="btnAddCart">Add</string>
    <string name="add_to_cart">Cart</string>
    <string name="placeorder">Placeorder</string>
    <string name="checkout_order">Checkout Order</string>
    <string name="your_address">Your address</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="refresh_address">Refresh Address</string>
    <string name="ok">Okay</string>
    <string name="gps_dialog_message">Please make sure that your GPS is turned on and your device is not on Aeroplane Mode then click the Refresh button.</string>
    <string name="gps_dialog_title">Failed to detect location</string>
    <string name="order_error_message">Please fill up all necessary information. Thank you!</string>
    <string name="order_error_title">Incomplete information</string>
    <string name="order_submit_error_title">Failed to place order</string>
    <string name="order_error_submit">Please make sure that you have a stable internet connection or restart the app. Sorry for the inconvenience.</string>
    <string name="pay_order">Received</string>
    <string name="order_location">Your order location</string>
    <string name="order_location_error">Sorry, the current location of your order is not yet available. Please wait for further updates.</string>
    <string name="error_order_title">Untracked Order</string>
    <string name="title_activity_deliver">DeliverActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">My Delivery</string>
    <string name="second_fragment_label">All Delivery</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="title_activity_delivery_confirm">DeliveryConfirmActivity</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="set_delivered">Delivered</string>
    <string name="your_location">Your location</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="cancel">Later</string>
    <string name="order_location_reminder">Please record your current location to update the customer about the location of their order.</string>
    <string name="location_reminder_title">Reminder</string>
    <string name="cash_description">This order is Cash on Delivery payment type. Please confirm that you receive the right amount due. Thank you!</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="change_cash">Change</string>
    <string name="confirm_payment">Confirm</string>
    <string name="gcash_description">Send your payment on the Gcash number below and fill the necessary information below so we can confirm your Gcash payment. Thank you!</string>
    <string name="gcash_account_number">Gcash Account Number</string>
    <string name="gcash_accounbt_hint">0917*******</string>
    <string name="gcash_reference_number">Gcash Reference Number</string>
    <string name="gcash_re4ference_hint">9295*****</string>
    <string name="gcash_error">Gcash account number and the transaction Reference Number is required to place your order.</string>
    <string name="gcash_error_title">Invalid Account and Reference Number</string>
    <string name="button_liked">Liked</string>
    <string name="channel_name">Order Delivered</string>
    <string name="channel_description">Notified user when order is delivered</string>
</resources>