<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logosplash"/>

        <androidx.cardview.widget.CardView
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:elevation="3dp">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="7dp"
                android:drawableTint="@color/brown"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="@color/brown"
                android:textSize="14sp"
                tools:ignore="Autofill,TextContrastCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:elevation="3dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="7dp"
                    android:drawableTint="@color/brown"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="13dp"
                    android:singleLine="true"
                    android:textColor="@color/brown"
                    android:textSize="14sp"
                    tools:ignore="Autofill,TextContrastCheck" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove_red_eye_24"
                    android:layout_marginEnd="10dp"
                    tools:android="contentDescription"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/brown"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/brown"
            android:letterSpacing="0.02"
            android:padding="12sp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/brown"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/linkToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/register"
                android:textColor="@color/red"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>