<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/floatingActionButton2">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/please_provide_email_address_which_was_used_at_the_time_of_register"
            android:textColor="@color/brown"
            android:textSize="11sp"
            tools:ignore="TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/txtRegisteredEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="7dp"
                android:drawableTint="@color/brown"
                android:gravity="center_vertical"
                android:hint="@string/registered_e_mail"
                android:inputType="textEmailAddress"
                android:padding="12sp"
                android:singleLine="true"
                android:textColor="@color/brown"
                android:textColorHint="@color/whitebrown"
                android:textSize="16sp"
                tools:ignore="Autofill,TextContrastCheck" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSendResetLink"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck"
            android:text="@string/send_reset_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/brown"
            android:gravity="center"
            android:letterSpacing="0.02"
            android:paddingVertical="12dp"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/brown"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:id="@+id/redirectRegister"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>