<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/checkoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="65dp"
        android:theme="?attr/actionBarTheme"
        android:paddingEnd="15dp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_backPress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:borderWidth="0dp"
                android:layout_centerVertical="true"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                app:fabSize="mini"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:maxWidth="200dp"
                android:id="@+id/txt_checkoutTitle"
                android:layout_height="wrap_content"
                android:text="@string/checkout_order"
                android:layout_toEndOf="@id/fab_backPress"
                android:layout_centerVertical="true"
                android:textColor="@color/brown"
                android:layout_marginStart="20dp"
                android:textSize="18sp"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkoutToolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/check_out_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPlaceOrder"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@color/brown"
                android:text="@string/placeorder"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_placePrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/transparent_round_background"
                android:paddingTop="10dp"
                android:textColor="@color/brown"
                android:paddingBottom="10dp"
                android:text="Total Price: P00.00"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonPlaceOrder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_location_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_bottom_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:behavior_hideable="false"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <TextView
                android:id="@+id/label_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="15dp"
                android:text="@string/your_address"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_address"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/transparent_round_background"
                android:padding="7dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button_submit_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_submit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/brown"
                android:text="@string/confirm_address"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/button_refresh_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_refresh_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/transparent_round_background"
                android:text="@string/refresh_address"
                android:textColor="@color/brown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>